fix(Tabbar): badge number vertical align center

--- a/packages/common/style/var.less
+++ b/packages/common/style/var.less
@@ -279,7 +279,6 @@
 @info-background-color: @red;
 @info-dot-color: @red;
 @info-dot-size: 8px;
-@info-font-family: @price-integer-font-family;
 
 // Loading
 @loading-text-color: @gray-6;
